--- a/index.html
+++ b/index.html
@@ -7,8 +7,39 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
-<h1>AluraBooks</h1>
+
 <body>
-    
+    <header class="cabecalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container__botao">
+                <label for="menu">
+                        <span class="cabecalho__menu-hamburguer container__imagem"></span>
+                </label>
+            <img src="img-mobile_first/Logo.svg" alt="logo da Alurabooks" class="container__imagem">
+        </div>
+        <ul class="lista-menu">
+            <li class="lista-menu__titulo">Categoria</li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu__link">Programação</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu__link">Front-End</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu__link">Infraestrutura</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu__link">Business</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu__link">Design & Ux</a>
+            </li>
+        </ul>
+        <div class="container">
+            <a href="#"><img src="img-mobile_first/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+            <a href="#"><img src="img-mobile_first/Compras.svg" alt="carrinho de ocmpras" class="container__imagem"></a>
+            <a href="#"><img src="img-mobile_first/Usuario.svg" alt="menu usuario" class="container__imagem"></a>
+        </div>
+    </header>    
 </body>
 </html>
