--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>AluraBooks</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    
 </head>
 
 <body>
@@ -16,7 +17,7 @@
                         <span class="cabecalho__menu-hamburguer container__imagem"></span>
                 </label>
                 <ul class="lista-menu">
-                    <li class="lista-menu__titulo">Categoria</li>
+                    <li class="lista-menu__titulo">Categorias</li>
                     <li class="lista-menu__item">
                         <a href="#" class="lista-menu__link">Programação</a>
                     </li>
