--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
+    <section class="xxx">
+        <h2 class="xxx__titulo">MAIS VENDIDOS</h2>
+    </section>
     
 </body>
 </html>
