Adicionado opção card

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
     <!-- Carrossel -->
         <section class="carrossel">
-            <h2 class="carrossel__titulo">NOVOS LANÇAMENTOS</h2>
+            <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
                 <!-- Slider main container -->
             <div class="swiper">
                 <!-- If we need pagination -->
@@ -78,7 +78,37 @@
                 <!-- If we need scrollbar
                 <div class="swiper-scrollbar"></div> -->
             </div>
+
+            <div class="card">
+                <!-- 1ª Linha -->
+                <div class="card__descricao">
+                <!-- 1ª coluna -->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                <!-- 2ª coluna -->
+                    <img src="img-mobile_first/Angular.svg" alt="imagem logo angular">
+                </div>
+
+              <!-- 2ª Linha -->
+              <div class="card__botoes">
+                <!-- 1ª coluna -->
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="img-mobile_first/Favoritos.svg"></li>
+                    <li class="botoes__item"><img src="img-mobile_first/Compras.svg"></li>
+                </ul>
+                <!-- 2ª coluna -->
+                <a  href="#" class="botoes__ancora">Saiba mais</a>
+              </div>
+
+            </div>
+
+
         </section>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
