Finalizando a parte de tópicos

--- a/index.html
+++ b/index.html
@@ -157,29 +157,36 @@
         
                     </div>
         <!-- Tópicos visitados -->
-                    <div class="topicos">
-                        <div class="topicos__titulo">
-                            <h2 class="topicos__titulo recente">TÓPICOS VISITADOS RECENTEMENTE</h2>
-                        </div>
-                        <ul class="botoes__topicos">
-                            <a  href="#" class="botoes__topicos_item">Android</a>
-                            <a  href="#" class="botoes__topicos_item">Marketing Digital</a>
-                            <a  href="#" class="botoes__topicos_item">Agile</a>
-                        </ul>
-                        <ul class="botoes__topicos">
-                            <a  href="#" class="botoes__topicos_item">Startups</a>
-                            <a  href="#" class="botoes__topicos_item">Html & CSS</a>
-                            <a  href="#" class="botoes__topicos_item">Python</a>
-                        </ul>
-                        <ul class="botoes__topicos">
-                            <a  href="#" class="botoes__topicos_item">OO</a>
-                            <a  href="#" class="botoes__topicos_item">Java</a>
-                        </ul>
-
-                    </div>
-
-
-        </section>
+    </section>
+    <section class="topicos">
+            <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__item">
+                <a  href="#" class="topicos__link">Android</a>
+            </li>
+            <li class="topicos__item">
+                <a  href="#" class="topicos__link">Marketing Digital</a>
+            </li>
+            <li class="topicos__item">
+                <a  href="#" class="topicos__link">Agile</a>
+            </li>
+            <li class="topicos__item">
+                <a  href="#" class="topicos__link">Startups</a>
+            </li>
+            <li class="topicos__item">
+                <a  href="#" class="topicos__link">Html & CSS</a>
+            </li>
+            <li class="topicos__item">
+                <a  href="#" class="topicos__link">Python</a>
+            </li>
+            <li class="topicos__item">
+                <a  href="#" class="topicos__link">OO</a>
+            </li>
+            <li class="topicos__item">
+                <a  href="#" class="topicos__link">Java</a>
+            </li>
+        </ul>
+    </section>
 
 
 
