Criando o campo contato (sozinho)

--- a/index.html
+++ b/index.html
@@ -187,7 +187,12 @@
             </li>
         </ul>
     </section>
-
+    <!-- Contato -->
+    <section class="contato">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
+    </section>
 
 
 
