--- a/index.html
+++ b/index.html
@@ -191,10 +191,13 @@
     <section class="contato">
         <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
         <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
-        <input type="email" class="contato__email" placeholder="Cadastre seu e-mail">
+        <input type="email" placeholder="Cadastre seu e-mail" class="contato__email" >
     </section>
 
-
+    <hr/>
+    <footer class="rodape">
+        <h3 class="rodape__titulo">Grupo Alura</h3>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
