--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css">
-
-    
 </head>
-
 <body>
     <!-- Cabeçalho -->
     <header class="cabecalho">
@@ -42,6 +40,7 @@
             </ul>
         </div>
         <img src="img-mobile_first/Logo.svg" alt="logo da Alurabooks" class="container__imagem">
+        <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         <div class="container">
             <a href="#"><img src="img-mobile_first/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
             <a href="#"><img src="img-mobile_first/Compras.svg" alt="carrinho de ocmpras" class="container__imagem"></a>
