Ipad footer minha tentativa (concluída)

--- a/index.html
+++ b/index.html
@@ -231,8 +231,86 @@
     </section>
 
     <hr/>
+    <!-- Rodapé -->
     <footer class="rodape">
         <h3 class="rodape__titulo">Grupo Alura</h3>
+        <ul class="rodape__coluna">
+            <p class="rodape__coluna_cabecalho">Educação</p>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/Caelum.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Caelum</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/CasaDoCodigo.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Casa do código</a> 
+            </li>
+        </ul>
+
+
+        <ul class="rodape__coluna">
+            <p class="rodape__coluna_cabecalho">Educação Online</p>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/Alura.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Alura</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/AluraEmpresas.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Alura Para Empresas</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/AluraLATAM.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Alura Latam</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/AluraStart.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Alura Start</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/MusicDot.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">MusicDot</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/AluraLingua.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Alura Língua</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/PM3.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">PM3</a> 
+            </li>
+        </ul>
+
+        <ul class="rodape__coluna">
+            <p class="rodape__coluna_cabecalho">COMUNIDADE</p>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/HipstersTech.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Hipster ponto Tech</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/ScubaDev.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Sucuba Dev</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/LayersTech.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Layers ponto Tech</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/LikeABoss.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Like a Boss</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/CarreiraSemFronteira.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Carreira sem Fronteiras</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/HipstersJobs.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">Hipsters ponto Jobs</a> 
+            </li>
+            <li class="rodape__coluna_item">
+                <img src="img-mobile_first/GUJ.svg" class="rodape__icon">
+                <a href="#" class="rodape__coluna_link">GUJ</a> 
+            </li>
+        </ul>
+
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
