Finalização formato ipad

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <footer class="rodape">
         <h3 class="rodape__titulo">Grupo Alura</h3>
         <ul class="rodape__coluna">
-            <p class="rodape__coluna_cabecalho">Educação</p>
+            <li class="rodape__coluna_cabecalho">Educação</li>
             <li class="rodape__coluna_item">
                 <img src="img-mobile_first/Caelum.svg" class="rodape__icon">
                 <a href="#" class="rodape__coluna_link">Caelum</a> 
@@ -246,9 +246,8 @@
             </li>
         </ul>
 
-
         <ul class="rodape__coluna">
-            <p class="rodape__coluna_cabecalho">Educação Online</p>
+            <li class="rodape__coluna_cabecalho">Educação Online</li>
             <li class="rodape__coluna_item">
                 <img src="img-mobile_first/Alura.svg" class="rodape__icon">
                 <a href="#" class="rodape__coluna_link">Alura</a> 
@@ -280,7 +279,7 @@
         </ul>
 
         <ul class="rodape__coluna">
-            <p class="rodape__coluna_cabecalho">COMUNIDADE</p>
+            <li class="rodape__coluna_cabecalho">COMUNIDADE</li>
             <li class="rodape__coluna_item">
                 <img src="img-mobile_first/HipstersTech.svg" class="rodape__icon">
                 <a href="#" class="rodape__coluna_link">Hipster ponto Tech</a> 
