--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-                <label for="menu">
+                <label for="menu" class="container__rotulo">
                         <span class="cabecalho__menu-hamburguer container__imagem"></span>
                 </label>
                 <ul class="lista-menu">
@@ -43,7 +43,7 @@
         </div>
         <ul class="opçoes">
             <input type="checkbox" id="opçoes-menu" class="opçoes__botao">
-            <label for="opçoes-menu">
+            <label for="opçoes-menu" class="opçoes__rotulo">
             <li class="opçoes__item">Categorias</li>
             </label>
 
